# simple-paper-summarization

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
paper_crawler/: README.md  hello.py
paper_summary/: RAGforpaper.py  pyproject.toml
src/: __main__.py
src/paper_crawler/: .gitignore  __init__.py  hello.py  pyproject.toml
src/paper_summary/: RAGforpaper.py  __init__.py  pyproject.toml
