[project]
name = "simple-paper-summarization"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = ["paper_crawler", "paper_summary"]

[tool.uv.sources]
paper_crawler = { workspace = true }
paper_summary = { workspace = true }
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[tool.uv.workspace]
members = ["src/paper_crawler", "src/paper_summary"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = ["pre-commit>=4.0.1", "pytest>=8.3.3"]
