[project]
name = "paper_summary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.9",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.2.56",
    "pydantic>=2.10.3",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
